--- a/zen-tao/src/components/NavigationBar/NavigationBar.css
+++ b/zen-tao/src/components/NavigationBar/NavigationBar.css
@@ -1,8 +1,9 @@
 .nb-header-div {
     background:indigo;
-    height: 40px;
+    height: 52px;;
     width: 100%;
     position: relative;
+    overflow: hidden;
 }
 .nb-ul {
     list-style-type: none;
@@ -12,7 +13,6 @@
     overflow: hidden;
     border: 1px solid #4CAF50;
     background-color: #000000;
-    height: 50px;
 }
 li {
     float: left;
