--- a/zen-tao/src/App.css
+++ b/zen-tao/src/App.css
@@ -20,19 +20,34 @@
     --danger: #db3b21;
     --light: #f8f9fa;
     --dark: #343a40;
+    --detail-font-size:14px;
+    --sub-title-color:#1f78d1;
+    --title-font-weight:800;
+    --sub-title-font-weight:10;
     --breakpoint-xs: 0;
     --breakpoint-sm: 576px;
     --breakpoint-md: 768px;
     --breakpoint-lg: 992px;
     --breakpoint-xl: 1200px;
     --title-font-size:14px;
+    --small-title-font-size:10px;
     --font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-family-monospace: "Menlo", "DejaVu Sans Mono", "Liberation Mono", "Consolas", "Ubuntu Mono", "Courier New", "andale mono", "lucida console", monospace;
 }
 
+html,body {
+  background-color: #E8E8E7;
+  height: 100%;
+  width: 100%;
+}
+html,body,* {
+  margin: 0;
+  padding: 0;
+}
 .App {
   text-align: center;
 }
+
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
