--- a/zen-tao/src/components/NavigationBar/NavigationBar.css
+++ b/zen-tao/src/components/NavigationBar/NavigationBar.css
@@ -1,11 +1,13 @@
 .nb-header-div {
     background:indigo;
-    height: 52px;;
+    height: 100px;
     width: 100%;
-    position: relative;
+    top: 0;
+    position: absolute;
     overflow: hidden;
 }
 .nb-ul {
+    height: 100%;
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -18,6 +20,7 @@ li {
     float: left;
 }
 li a {
+    height: 100%;
     display: block;
     color: #666;
     text-align: center;
