--- a/zen-tao/src/pages/HomePage/HomePage.css
+++ b/zen-tao/src/pages/HomePage/HomePage.css
@@ -1,16 +1,3 @@
-import React, { Component } from 'react'
-
-export default class HomePage extends Component {
-    constructor(props) {
-        super(props);
-    }
-    render() {
-        return (
-            <div>
-
-                hello world.. 
-            </div>
-        );
-    }
+.hp-container {
+    position: relative;
 }
-
